monitoring/kube-prometheus-stack/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-route
  namespace: monitoring
spec:
  parentRefs:
    - name: gateway
      namespace: cloudflare-gateway
  hostnames:
    - prometheus.novusweb.pro
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: prometheus-kube-prometheus-prometheus
          port: 9090

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: monitoring
spec:
  parentRefs:
    - name: gateway
      namespace: cloudflare-gateway
  hostnames:
    - grafana.novusweb.pro
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: prometheus-grafana
          port: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager-route
  namespace: monitoring
spec:
  parentRefs:
    - name: gateway
      namespace: cloudflare-gateway
  hostnames:
    - alertmanager.novusweb.pro
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: prometheus-kube-prometheus-alertmanager
          port: 9093
